Telegram daemon for work with api with shedeuler

--- a/Pipfile
+++ b/Pipfile
@@ -10,6 +10,9 @@ telethon = "*"
 python-dotenv = "*"
 pillow = "*"
 pytz = "*"
+faker = "*"
+requests = "*"
+schedule = "*"
 
 [requires]
 python_version = "3.7"
